--- a/src/components/slider/MainContent.astro
+++ b/src/components/slider/MainContent.astro
@@ -53,13 +53,13 @@ const titles = [m["main.explore"](), m["main.analyse"](), "AI"];
     {m["main.aiPlatform"]()}
   </p>
   <div
-    class={`text-[#EE7380] text-[75px] md:text-[100px] flex flex-col mb-4 gap-6 w-screen lg:ml-64 lg:flex-row items-center justify-center font-semibold tracking-[2.6px] lg:text-[130px]`}
+    class={`text-[#EE7380] text-[75px] md:text-[100px] flex flex-col mb-4 gap-6 lg:ml-64 lg:flex-row items-center justify-center font-semibold tracking-[2.6px] lg:text-[130px]`}
   >
     <Image src="/ion.svg" alt="key" width={240} height={50} />
 
     <div class="animated-box-text h-[200px] lg:h-[250px]">
       <div class="flex flex-row items-center">
-        <span class="animated-slides-text w-[400px] lg:min-w-[500px] text-center lg:text-left">{titles[0]}</span>
+        <span class="animated-slides-text w-fit lg:min-w-[500px] text-center lg:text-left">{titles[0]}</span>
         <!-- <span class="opacity-100 lg:opacity-0 h-24 w-24">
           <ImageAnimation />
         </span> -->
