--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -199,12 +199,17 @@ const stats = [
     modules: [Pagination],
     slidesPerView: 1,
     direction: "horizontal",
+    spaceBetween: 20,
     pagination: {
       el: ".swiper-pagination",
       clickable: true,
       dynamicBullets: true,
     },
-    loop: true,
+    breakpoints: {
+      768: {
+        spaceBetween: 30,
+      },
+    },
   });
 
 </script>
@@ -292,11 +297,11 @@ const stats = [
         {m["index.goals.title"]()}
       </h2> 
 
-      <!-- <div class="goals-swiper lg:hidden">
+      <div class="goals-swiper max-w-full overflow-hidden mx-auto px-4 md:hidden">
         <div class="swiper-wrapper">
           {features.map(feature => 
           (
-             <div class="text-center p-6 swiper-slide">
+             <div class="text-center p-6 swiper-slide w-full">
               <img
                 src={feature.icon}
                 alt={feature.title}
@@ -310,10 +315,10 @@ const stats = [
           ))}
         </div>
         <div class="swiper-pagination"></div>
-      </div> -->
+      </div>
 
       <div
-        class="grid max-w-7xl mx-auto animate-appear grid-cols-1 lg:grid-cols-2 gap-8"
+        class="hidden md:grid max-w-7xl mx-auto animate-appear grid-cols-1 md:grid-cols-2  gap-8"
       >
         {
           features.slice(0, 2).map((feature) => (
@@ -333,7 +338,7 @@ const stats = [
       </div>
 
       <div
-        class="grid max-w-7xl mx-auto animate-appear grid-cols-1 lg:grid-cols-3 gap-8"
+        class="hidden md:grid max-w-7xl mx-auto animate-appear grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"
       >
         {
           features.slice(2, 6).map((feature) => (
@@ -366,7 +371,7 @@ const stats = [
 
         <div class="space-y-12">
           {
-            stats.map((stat) => (
+            stats.map((stat, i) => (
               <div class="flex flex-col relative lg:flex-row gap-4 lg:gap-12 justify-center lg:justify-normal items-center">
                 <div class="flex flex-row items-end lg:items-center lg:gap-12">
                   <div class="relative">
@@ -382,7 +387,7 @@ const stats = [
                       </span>
                     )}
                   </div>
-                  <span class="text-[24px] lg:text-[34px] font-semibold text-start w-[290px]">
+                  <span class={`text-[24px] lg:text-[34px] font-semibold text-start ${i === 1 && "ml-8"}`}>
                     {stat.title}
                   </span>
                 </div> 
@@ -403,7 +408,7 @@ const stats = [
           <span class="text-[#EE7380]">{m["index.pricing.title"]()}</span>
         </h2>
 
-        <div class="flex flex-col items-center space-y-14">
+        <div class="flex flex-col max-w-full items-center space-y-14">
           <Switcher />
 
           <PriceCardsData client:load />
