--- a/src/pages/[lang]/features.astro
+++ b/src/pages/[lang]/features.astro
@@ -136,6 +136,13 @@ const analyseTabs = [
             class="text-[63px] lg:text-[146px] font-semibold lg:leading-[160px]"
             >{m["features.title"]()}</span
           >
+          <Image
+            class="block lg:hidden"
+            src="/FeaturesImage.png"
+            alt="features"
+            width={125}
+            height={125}
+          />
           <a href="https://app.ionkol.com/sign-up">
             <Button text={m["features.startNow"]()} className="w-[188px]" />
           </a>
@@ -154,7 +161,7 @@ const analyseTabs = [
       <div
         class="flex flex-col lg:flex-row lg:items-start items-center justify-center w-full gap-20 mt-20"
       >
-        <div class="flex flex-col gap-6 max-w-2xl lg:pt-4">
+        <div class="flex flex-col items-center lg:items-start gap-6 max-w-2xl lg:pt-4">
           <div class="flex flex-row gap-2">
             <Image src="/ion.svg" alt="features" width={99} height={50} />
             <span class="font-semibold text-5xl"
@@ -162,7 +169,7 @@ const analyseTabs = [
             >
           </div>
 
-          <p class="text-xl">
+          <p class="text-xl text-center lg:text-left">
             {m["features.explore.description2"]()}
           </p>
           <a href="https://app.ionkol.com/sign-up">
@@ -185,7 +192,7 @@ const analyseTabs = [
       <div
         class="flex flex-col lg:flex-row lg:items-start items-center justify-center w-full gap-20 mt-20"
       >
-        <div class="flex flex-col gap-6 max-w-2xl lg:pt-4">
+        <div class="flex flex-col items-center lg:items-start gap-6 max-w-2xl lg:pt-4">
           <div class="flex flex-row gap-2">
             <Image src="/ion.svg" alt="features" width={99} height={50} />
             <span class="font-semibold text-5xl"
@@ -193,7 +200,7 @@ const analyseTabs = [
             >
           </div>
 
-          <p class="text-xl">
+          <p class="text-xl text-center lg:text-left">
             {m["features.analyse.description"]()}
           </p>
 
