--- a/src/pages/[lang]/resources/index.astro
+++ b/src/pages/[lang]/resources/index.astro
@@ -86,7 +86,7 @@ import FeaturedPost from "../../../components/react/resources/FeaturedPost";
 
     <section class="pb-32 px-4 lg:px-12">
       <div class="flex flex-col items-center justify-center w-full gap-12">
-        <span class="text-[62px] text-[#EE7380] font-semibold">
+        <span class="text-[62px] text-[#EE7380] font-semibold text-center lg:text-left">
           {m["resources.faq.title"]()}
         </span>
         <FAQ client:load />
