feat: new icons in slider for ai and link

--- a/src/components/slider/ImageAnimation.astro
+++ b/src/components/slider/ImageAnimation.astro
@@ -43,7 +43,7 @@
 </div>
 
 <script>
-  const images = ["/sliderIcon1.svg", "/sliderIcon2.svg"];
+  const images = ["/sliderIcon1.svg", "/sliderIcon2.svg", "/sliderIcon3.svg", "/sliderIcon4.svg"];
   let index = 0;
   const container: any = document.querySelector(".animated-slides");
 
