--- a/src/components/slider/MainContent.astro
+++ b/src/components/slider/MainContent.astro
@@ -60,7 +60,7 @@ const titles = [m["main.explore"](), m["main.analyse"](), "AI"];
     <div class="animated-box-text h-[200px] lg:h-[250px]">
       <div class="flex flex-row items-center">
         <div class="w-fit lg:min-w-[500px]">
-          <div class="w-full flex items-center justify-center">
+          <div class="w-full flex justify-center lg:justify-normal">
             <img class="animated-slides-text" alt="SliderText"  />
           </div>
         </div>
