feat: animation update, some styling updates

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -99,15 +99,6 @@ import { m } from "../paraglide/messages.js";
       <ul class="flex flex-col text-center lg:text-left">
         <li>
           <a
-            href="/aboutUs"
-            class="text-lg leading-normal tracking-tight"
-            data-link="/aboutUs"
-          >
-            {m["footer.whoWeAre.aboutUs"]()}
-          </a>
-        </li>
-        <li>
-          <a
             href="/resources"
             class="text-lg leading-normal tracking-tight"
             data-link="/resources"
@@ -128,7 +119,7 @@ import { m } from "../paraglide/messages.js";
     </div>
   </nav>
 
-  <div class="flex flex-row gap-4 absolute w-64 bottom-0 md:right-16 md:bottom-20 self-center">
+  <div class="flex flex-row justify-center gap-4 absolute w-64 bottom-0 md:right-16 md:bottom-20 self-center">
     <a href="/terms" class="text-lg leading-normal tracking-tight" data-link="/terms">
       {m["footer.legal.privacyPolicy"]()}
     </a>
