--- a/src/components/Subscribe.astro
+++ b/src/components/Subscribe.astro
@@ -5,7 +5,7 @@ import { m } from "../paraglide/messages.js";
 
 <section class="h-[468px] py-20 flex justify-center items-center">
   <div
-    class="animate-appear w-full flex justify-center bg-[#FFE2E5] transform opacity-0 translate-y-10 p-32 relative"
+    class="animate-appear w-full flex justify-center bg-[#FFE2E5] transform opacity-0 translate-y-10 py-32 px-4 relative"
   >
     <div class="max-w-[654px]">
       <h1 class="text-center text-[#EE7380] text-[62px] font-semibold mb-4">
