--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -387,7 +387,7 @@ const stats = [
                       </span>
                     )}
                   </div>
-                  <span class={`text-[24px] lg:text-[34px] font-semibold text-start ${i === 1 && "ml-8"}`}>
+                  <span class={`text-[24px] lg:text-[34px] font-semibold  ${i === 0 ? "mb-8 lg:mb-0" : "ml-8 mb-7 lg:mb-0"}`}>
                     {stat.title}
                   </span>
                 </div> 
