feat: terms and conditions new design

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -120,7 +120,7 @@ import { m } from "../paraglide/messages.js";
   </nav>
 
   <div class="flex flex-row justify-center gap-4 absolute w-64 bottom-0 md:right-16 md:bottom-20 self-center">
-    <a href="/terms" class="text-lg leading-normal tracking-tight" data-link="/terms">
+    <a href="/privacy" class="text-lg leading-normal tracking-tight" data-link="/privacy">
       {m["footer.legal.privacyPolicy"]()}
     </a>
     <span>|</span>
