--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -63,10 +63,10 @@ const navItems = [
     </ul>
 
     <LanguageSwitcher client:load />
-    <a id="sign-up-link">
+    <a class="sign-up-link">
       <Button text={m["navbar.signUp"]()} type="outline" /></a
     >
-    <a id="sign-in-link"> <Button text={m["navbar.login"]()} /></a>
+    <a class="sign-in-link"> <Button text={m["navbar.login"]()} /></a>
   </div>
 </header>
 
@@ -94,10 +94,10 @@ const navItems = [
   </nav>
 
   <div class="flex flex-col gap-4">
-    <a id="sign-up-link">
+    <a class="sign-up-link">
       <Button className="w-full" text={m["navbar.signUp"]()} type="outline" />
     </a>
-    <a id="sign-in-link">
+    <a class="sign-in-link">
       <Button className="w-full" text={m["navbar.login"]()} />
     </a>
   </div>
@@ -118,15 +118,14 @@ const navItems = [
       link.href = `/${currentLang}${basePath}`;
     });
 
-    const loginLink = document.getElementById("sign-in-link");
-    const signUpLink = document.getElementById("sign-up-link");
+    const loginLink = document.getElementsByClassName("sign-in-link");
+    const signUpLink = document.getElementsByClassName("sign-up-link");
 
-    if (loginLink) {
-      loginLink.href = `https://app.ionkol.com/${currentLang}/sign-in`;
+    for (const link of loginLink) {
+      link.href = `https://app.ionkol.com/${currentLang}/sign-in`;
     }
-
-    if (signUpLink) {
-      signUpLink.href = `https://app.ionkol.com/${currentLang}/sign-up`;
+    for (const link of signUpLink) {
+      link.href = `https://app.ionkol.com/${currentLang}/sign-up`;
     }
   }
 
