feat: new favicon, titles for pages, privacy & policy pages updates & contact us & demo

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -71,9 +71,9 @@ import { m } from "../paraglide/messages.js";
       <ul class="flex flex-col text-center lg:text-left">
         <li>
           <a
-            href="/contactUs"
+            href="/demo"
             class="text-lg leading-normal tracking-tight"
-            data-link="/contactUs"
+            data-link="/demo"
           >
             {m["footer.getStarted.bookDemo"]()}
           </a>
