--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -214,7 +214,7 @@ const stats = [
 
 </script>
 
-<Layout title={"IONKOL | Data-driven Success"}>
+<Layout title={"Ionkol | AI-Enabled Marketing Models"}>
   <Navbar />
   <main class="relative">
     <section
