--- a/src/pages/[lang]/pricing.astro
+++ b/src/pages/[lang]/pricing.astro
@@ -69,7 +69,7 @@ import { m } from "../../paraglide/messages.js";
   );
 </script>
 
-<Layout title="Pricing - iON">
+<Layout title="Ionkol Pricing | Setup and Analyse">
   <Navbar />
   <main class="relative">
     <section class="mt-40 pb-32 px-4 lg:px-12">
