--- a/src/pages/[lang]/features.astro
+++ b/src/pages/[lang]/features.astro
@@ -113,7 +113,7 @@ const analyseTabs = [
   });
 </script>
 
-<Layout title="Features - iON">
+<Layout title="Ionkol Features | Data Driven Success">
   <Navbar />
   <main class="relative">
     <section class="mt-40 pb-32 px-4 lg:px-12">
