--- a/src/pages/[lang]/resources/index.astro
+++ b/src/pages/[lang]/resources/index.astro
@@ -72,7 +72,7 @@ import FeaturedPost from "../../../components/react/resources/FeaturedPost";
   );
 </script>
 
-<Layout title="Resources - iON">
+<Layout title="Ionkol | Resource Hub">
   <Navbar />
   <main class="relative">
     <section class="mt-40 pb-32 px-4 lg:px-12">
